--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.1",
     "pg": "^8.9.0",
     "sequelize": "^6.28.0"
   },
