--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "handlebars": "^4.7.7",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.1",
     "pg": "^8.9.0",
